style: Fix formatting issues